--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Jinja2==2.9.5
 MarkupSafe==1.0
 packaging==16.8
 peewee==2.9.0
+psycopg2==2.7
 pyparsing==2.2.0
 python-dateutil==2.6.0
 pytz==2016.10
